<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rating</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name">ListViewBaseAdapter</string>
    <string name="title_activity_instruct">InstructActivity</string>
    <string name="title_activity_post">PostActivity</string>
    <string name="rate_comment_button">Rate And Comment</string>
    <string name="post_rate">Submit Rating</string>
    <string name="post_comment">Submit Comment</string>
    <string name="text_rate"> Rating :</string>
    <string name="text_comment"> Comment :</string>

    <string name="rating_text"> </string>
    <string name="comment_text"> </string>

</resources> <!-- <resources> -->
<!-- <string name="hello">Hello World, ImageTextListViewActivity!</string> -->
<!-- <string name="app_name">SimpleImageTextListView</string> -->
<!-- <string name="name">ListViewBaseAdapter</string> -->
<!-- <string name="image">Thumbnail</string> -->
<!-- </resources> -->
